--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             <button class="subscribe-button" type="submit">
               Subscribe
               <svg class="subscribe-button-icon" width="24" height="24">
-                <use href="./images/icons.svg#send"></use>
+                <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
           </form>
