--- a/index.html
+++ b/index.html
@@ -558,89 +558,85 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay">
+    <div id="modal" class="modal-container is-open">
       <div class="modal">
-        <button type="button" class="modal-close">
-          <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
+        <button type="button" class="close-button">
+          <svg width="8" height="8">
+            <use href="./images/icons.svg#icon-close" />
           </svg>
         </button>
-        <p class="modal-caption">
-          Leave your contacts and we will call you back
-        </p>
-
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <div class="modal-form-field">
-            <label class="modal-form-label" for="user-name">Name</label>
-            <div class="modal-form-wrapper">
+          <div class="form-element-container">
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="modal-input-container">
               <input
-                class="modal-form-input"
-                type="text"
-                name="user-name"
                 id="user-name"
+                name="user-name"
+                type="text"
+                class="modal-input"
               />
-              <svg class="modal-form-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-name"></use>
+              <svg width="18" height="24" class="modal-input-icon">
+                <use href="./images/icons.svg#icon-name" />
               </svg>
             </div>
           </div>
-          <div class="modal-form-field">
-            <label class="modal-form-label" for="user-name">Phone</label>
-            <div class="modal-form-wrapper">
+          <div class="form-element-container">
+            <label for="user-phone" class="modal-label">Phone</label>
+            <div class="modal-input-container">
               <input
-                class="modal-form-input"
-                type="tel"
-                name="user-phone"
                 id="user-phone"
+                name="user-phone"
+                type="text"
+                class="modal-input"
               />
-              <svg class="modal-form-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone"></use>
+              <svg width="18" height="24" class="modal-input-icon">
+                <use href="./images/icons.svg#icon-phone" />
               </svg>
             </div>
           </div>
-          <div class="modal-form-field">
-            <label class="modal-form-label" for="user-name">Email</label>
-            <div class="modal-form-wrapper">
+          <div class="form-element-container">
+            <label for="user-email" class="modal-label">Email</label>
+            <div class="modal-input-container">
               <input
-                class="modal-form-input"
-                type="email"
-                name="user-email"
                 id="user-email"
+                name="user-email"
+                type="text"
+                class="modal-input"
               />
-              <svg class="modal-form-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-email"></use>
+              <svg width="18" height="24" class="modal-input-icon">
+                <use href="./images/icons.svg#icon-email" />
               </svg>
             </div>
           </div>
-          <div class="modal-form-field">
-            <label class="modal-form-label" for="user-comment">Comment</label>
+          <div class="form-comment-element-container">
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
-              class="modal-form-comment"
-              rows="4"
-              name="user-comment"
               id="user-comment"
+              name="user-comment"
               placeholder="Text input"
+              class="modal-textarea"
             ></textarea>
           </div>
-          <div class="modal-form-agreement">
+          <div class="form-privacy-element-container">
             <input
-              class="visually-hidden"
-              type="checkbox"
-              name="user-privacy"
               id="user-privacy"
+              type="checkbox"
               value="true"
+              name="user-privacy"
+              class="visually-hidden"
             />
-            <label class="modal-form-description" for="user-privacy">
-              <span class="modal-form-checkbox">
-                <svg class="modal-form-checkbox-icon" width="10" height="8">
-                  <use href="./images/icons.svg#checkmark"></use>
+            <label for="user-privacy" class="modal-checkbox-label">
+              <span class="checkbox-span">
+                <svg width="10" height="8" class="checkbox-span-svg">
+                  <use href="./images/icons.svg#checkmark" />
                 </svg>
               </span>
-              "I accept the terms and conditions of the&nbsp;"
-              <a class="modal-form-link" href="#">Privacy Policy</a>
+              I accept the terms and conditions of the
+              <a href="#" class="privacy-link">Privacy Policy</a>
             </label>
           </div>
-          <button class="modal-button-send" type="submit">Send</button>
+          <button type="submit" class="modal-submit-button">Submit</button>
         </form>
       </div>
     </div>
